ProjectParser.py
# Generated from Project.g4 by ANTLR 4.6
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class ProjectParser ( Parser ):

    grammarFileName = "Project.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'%'", u"'Va'", u"'Ya'", u"'Bool'", 
                     u"'Bepar_biroon'", u"'Reshte'", u"'Adad_Ashar_bozorg'", 
                     u"'Adad_Ashar_riz'", u"'Adad_Sahih'", u"'Adad_Sahih_bozorg'", 
                     u"'Adad_Sahih_riz'", u"'Harf'", u"'Bargardoon'", u"'Ta_Vaghti_Ke'", 
                     u"'Khoususi'", u"'Omoumi'", u"'Agar'", u"'Kelas'", 
                     u"'Ghalat'", u"'Sahih'", u"'Anjam_Bede'", u"'Vagar_Na'", 
                     u"'Mostar'", u"'Entekhab'", u"'Halat'", u"'Sabet'", 
                     u"'Edame_Bede'", u"'Shomaresh'", u"'Baraye'", u"'Null'", 
                     u"'Void'", u"'PishFarz'", u"'('", u"')'", u"'{'", u"'}'", 
                     u"'['", u"']'", u"';'", u"','", u"'.'", u"':'", u"'='", 
                     u"'>'", u"'<'", u"'=='", u"'<='", u"'>='", u"'!='", 
                     u"'++'", u"'--'", u"'+'", u"'-'", u"'*'", u"'/'", u"'!'", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"'0'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"AND", u"OR", u"Bool", 
                      u"Break", u"String", u"Float", u"Double", u"Int", 
                      u"Long", u"Short", u"Char", u"Return", u"While", u"Private", 
                      u"Public", u"If", u"Class_", u"False_", u"True_", 
                      u"Do", u"Else", u"Alias", u"Switch", u"Case", u"Const", 
                      u"Continue", u"Enum", u"For", u"NullLiteral", u"Void", 
                      u"Default", u"Lparen", u"Rparen", u"Lbrace", u"Rbrace", 
                      u"Lbrack", u"Rbrack", u"Semi", u"Comma", u"Dot", u"Colon", 
                      u"Assign", u"Gt", u"Lt", u"Equal", u"Le", u"Ge", u"Not_Equal", 
                      u"Inc", u"Dec", u"Add", u"Sub", u"Mul", u"Div", u"Not", 
                      u"Letter", u"Digit", u"ID", u"NonZeroDigit", u"Zero", 
                      u"IntegerConst", u"DigitSeq", u"FloatConst", u"CharConst", 
                      u"CChar", u"EscSeq", u"Constant", u"StrLiteral", u"SChar", 
                      u"Whitespace", u"Newline", u"BlockComment", u"LineComment", 
                      u"Str" ]

    RULE_primaryExpr = 0
    RULE_postfixExpr = 1
    RULE_argumentExprList = 2
    RULE_unaryExpr = 3
    RULE_unaryOperator = 4
    RULE_castExpr = 5
    RULE_multiplicativeExpr = 6
    RULE_additiveExpr = 7
    RULE_relationalExpr = 8
    RULE_equalityExpr = 9
    RULE_logicalAndExpr = 10
    RULE_logicalOrExpr = 11
    RULE_assignmentExpr = 12
    RULE_expr = 13
    RULE_constantExpr = 14
    RULE_declaration = 15
    RULE_declarationSpecifiers = 16
    RULE_declarationSpecifiers2 = 17
    RULE_declarationSpecifier = 18
    RULE_initDeclaratorList = 19
    RULE_initDeclarator = 20
    RULE_typeSpecifier = 21
    RULE_classSpecifier = 22
    RULE_classDeclarationList = 23
    RULE_classDeclaration = 24
    RULE_specifierQualifierList = 25
    RULE_classDeclaratorList = 26
    RULE_classDeclarator = 27
    RULE_enumSpecifier = 28
    RULE_enumeratorList = 29
    RULE_enumerator = 30
    RULE_enumerationConstant = 31
    RULE_typeQualifier = 32
    RULE_declarator = 33
    RULE_directDeclarator = 34
    RULE_nestedParenthesesBlock = 35
    RULE_parameterTypeList = 36
    RULE_parameterList = 37
    RULE_parameterDeclaration = 38
    RULE_identifierList = 39
    RULE_typeName = 40
    RULE_abstractDeclarator = 41
    RULE_directAbstractDeclarator = 42
    RULE_initializer = 43
    RULE_initializerList = 44
    RULE_designation = 45
    RULE_designatorList = 46
    RULE_designator = 47
    RULE_statement = 48
    RULE_labeledStatement = 49
    RULE_compoundStatement = 50
    RULE_blockItemList = 51
    RULE_blockItem = 52
    RULE_expressionStatement = 53
    RULE_selectionStatement = 54
    RULE_iterationStatement = 55
    RULE_jumpStatement = 56
    RULE_program = 57
    RULE_translationUnit = 58
    RULE_externalDeclaration = 59
    RULE_functionDefinition = 60
    RULE_declarationList = 61

    ruleNames =  [ u"primaryExpr", u"postfixExpr", u"argumentExprList", 
                   u"unaryExpr", u"unaryOperator", u"castExpr", u"multiplicativeExpr", 
                   u"additiveExpr", u"relationalExpr", u"equalityExpr", 
                   u"logicalAndExpr", u"logicalOrExpr", u"assignmentExpr", 
                   u"expr", u"constantExpr", u"declaration", u"declarationSpecifiers", 
                   u"declarationSpecifiers2", u"declarationSpecifier", u"initDeclaratorList", 
                   u"initDeclarator", u"typeSpecifier", u"classSpecifier", 
                   u"classDeclarationList", u"classDeclaration", u"specifierQualifierList", 
                   u"classDeclaratorList", u"classDeclarator", u"enumSpecifier", 
                   u"enumeratorList", u"enumerator", u"enumerationConstant", 
                   u"typeQualifier", u"declarator", u"directDeclarator", 
                   u"nestedParenthesesBlock", u"parameterTypeList", u"parameterList", 
                   u"parameterDeclaration", u"identifierList", u"typeName", 
                   u"abstractDeclarator", u"directAbstractDeclarator", u"initializer", 
                   u"initializerList", u"designation", u"designatorList", 
                   u"designator", u"statement", u"labeledStatement", u"compoundStatement", 
                   u"blockItemList", u"blockItem", u"expressionStatement", 
                   u"selectionStatement", u"iterationStatement", u"jumpStatement", 
                   u"program", u"translationUnit", u"externalDeclaration", 
                   u"functionDefinition", u"declarationList" ]

    EOF = Token.EOF
    T__0=1
    AND=2
    OR=3
    Bool=4
    Break=5
    String=6
    Float=7
    Double=8
    Int=9
    Long=10
    Short=11
    Char=12
    Return=13
    While=14
    Private=15
    Public=16
    If=17
    Class_=18
    False_=19
    True_=20
    Do=21
    Else=22
    Alias=23
    Switch=24
    Case=25
    Const=26
    Continue=27
    Enum=28
    For=29
    NullLiteral=30
    Void=31
    Default=32
    Lparen=33
    Rparen=34
    Lbrace=35
    Rbrace=36
    Lbrack=37
    Rbrack=38
    Semi=39
    Comma=40
    Dot=41
    Colon=42
    Assign=43
    Gt=44
    Lt=45
    Equal=46
    Le=47
    Ge=48
    Not_Equal=49
    Inc=50
    Dec=51
    Add=52
    Sub=53
    Mul=54
    Div=55
    Not=56
    Letter=57
    Digit=58
    ID=59
    NonZeroDigit=60
    Zero=61
    IntegerConst=62
    DigitSeq=63
    FloatConst=64
    CharConst=65
    CChar=66
    EscSeq=67
    Constant=68
    StrLiteral=69
    SChar=70
    Whitespace=71
    Newline=72
    BlockComment=73
    LineComment=74
    Str=75

    def __init__(self, input):
        super(ProjectParser, self).__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class PrimaryExprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ProjectParser.PrimaryExprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ProjectParser.ID, 0)

        def Constant(self):
            return self.getToken(ProjectParser.Constant, 0)

        def StrLiteral(self, i=None):
            if i is None:
                return self.getTokens(ProjectParser.StrLiteral)
            else:
                return self.getToken(ProjectParser.StrLiteral, i)

        def expr(self):
            return self.getTypedRuleContext(ProjectParser.ExprContext,0)


        def getRuleIndex(self):
            return ProjectParser.RULE_primaryExpr

        def enterRule(self, listener):
            if hasattr(listener, "enterPrimaryExpr"):
                listener.enterPrimaryExpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPrimaryExpr"):
                listener.exitPrimaryExpr(self)




    def primaryExpr(self):

        localctx = ProjectParser.PrimaryExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_primaryExpr)
        try:
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ProjectParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(ProjectParser.ID)
                pass
            elif token in [ProjectParser.Constant]:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.match(ProjectParser.Constant)
                pass
            elif token in [ProjectParser.StrLiteral]:
                self.enterOuterAlt(localctx, 3)
                self.state = 127 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 126
                        self.match(ProjectParser.StrLiteral)

                    else:
                        raise NoViableAltException(self)
                    self.state = 129 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

                pass
            elif token in [ProjectParser.Lparen]:
                self.enterOuterAlt(localctx, 4)
                self.state = 131
                self.match(ProjectParser.Lparen)
                self.state = 132
                self.expr(0)
                self.state = 133
                self.match(ProjectParser.Rparen)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PostfixExprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ProjectParser.PostfixExprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def primaryExpr(self):
            return self.getTypedRuleContext(ProjectParser.PrimaryExprContext,0)


        def typeName(self):
            return self.getTypedRuleContext(ProjectParser.TypeNameContext,0)


        def initializerList(self):
            return self.getTypedRuleContext(ProjectParser.InitializerListContext,0)


        def postfixExpr(self):
            return self.getTypedRuleContext(ProjectParser.PostfixExprContext,0)


        def expr(self):
            return self.getTypedRuleContext(ProjectParser.ExprContext,0)


        def argumentExprList(self):
            return self.getTypedRuleContext(ProjectParser.ArgumentExprListContext,0)


        def ID(self):
            return self.getToken(ProjectParser.ID, 0)

        def getRuleIndex(self):
            return ProjectParser.RULE_postfixExpr

        def enterRule(self, listener):
            if hasattr(listener, "enterPostfixExpr"):
                listener.enterPostfixExpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPostfixExpr"):
                listener.exitPostfixExpr(self)



    def postfixExpr(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ProjectParser.PostfixExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_postfixExpr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 138
                self.primaryExpr()
                pass

            elif la_ == 2:
                self.state = 139
                self.match(ProjectParser.Lparen)
                self.state = 140
                self.typeName()
                self.state = 141
                self.match(ProjectParser.Rparen)
                self.state = 142
                self.match(ProjectParser.Lbrace)
                self.state = 143
                self.initializerList(0)
                self.state = 144
                self.match(ProjectParser.Rbrace)
                pass

            elif la_ == 3:
                self.state = 146
                self.match(ProjectParser.Lparen)
                self.state = 147
                self.typeName()
                self.state = 148
                self.match(ProjectParser.Rparen)
                self.state = 149
                self.match(ProjectParser.Lbrace)
                self.state = 150
                self.initializerList(0)
                self.state = 151
                self.match(ProjectParser.Comma)
                self.state = 152
                self.match(ProjectParser.Rbrace)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 172
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 170
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = ProjectParser.PostfixExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfixExpr)
                        self.state = 156
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 157
                        self.match(ProjectParser.Lbrack)
                        self.state = 158
                        self.expr(0)
                        self.state = 159
                        self.match(ProjectParser.Rbrack)
                        pass

                    elif la_ == 2:
                        localctx = ProjectParser.PostfixExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfixExpr)
                        self.state = 161
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 162
                        self.match(ProjectParser.Lparen)
                        self.state = 164
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if ((((_la - 33)) & ~0x3f) == 0 and ((1 << (_la - 33)) & ((1 << (ProjectParser.Lparen - 33)) | (1 << (ProjectParser.Add - 33)) | (1 << (ProjectParser.Sub - 33)) | (1 << (ProjectParser.Not - 33)) | (1 << (ProjectParser.ID - 33)) | (1 << (ProjectParser.Constant - 33)) | (1 << (ProjectParser.StrLiteral - 33)))) != 0):
                            self.state = 163
                            self.argumentExprList(0)


                        self.state = 166
                        self.match(ProjectParser.Rparen)
                        pass

                    elif la_ == 3:
                        localctx = ProjectParser.PostfixExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfixExpr)
                        self.state = 167
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 168
                        self.match(ProjectParser.Dot)
                        self.state = 169
                        self.match(ProjectParser.ID)
                        pass

             
                self.state = 174
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ArgumentExprListContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ProjectParser.ArgumentExprListContext, self).__init__(parent, invokingState)
            self.parser = parser

        def assignmentExpr(self):
            return self.getTypedRuleContext(ProjectParser.AssignmentExprContext,0)


        def argumentExprList(self):
            return self.getTypedRuleContext(ProjectParser.ArgumentExprListContext,0)


        def getRuleIndex(self):
            return ProjectParser.RULE_argumentExprList

        def enterRule(self, listener):
            if hasattr(listener, "enterArgumentExprList"):
                listener.enterArgumentExprList(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitArgumentExprList"):
                listener.exitArgumentExprList(self)



    def argumentExprList(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ProjectParser.ArgumentExprListContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_argumentExprList, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.assignmentExpr()
            self._ctx.stop = self._input.LT(-1)
            self.state = 183
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ProjectParser.ArgumentExprListContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_argumentExprList)
                    self.state = 178
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 179
                    self.match(ProjectParser.Comma)
                    self.state = 180
                    self.assignmentExpr() 
                self.state = 185
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class UnaryExprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ProjectParser.UnaryExprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def postfixExpr(self):
            return self.getTypedRuleContext(ProjectParser.PostfixExprContext,0)


        def unaryOperator(self):
            return self.getTypedRuleContext(ProjectParser.UnaryOperatorContext,0)


        def castExpr(self):
            return self.getTypedRuleContext(ProjectParser.CastExprContext,0)


        def getRuleIndex(self):
            return ProjectParser.RULE_unaryExpr

        def enterRule(self, listener):
            if hasattr(listener, "enterUnaryExpr"):
                listener.enterUnaryExpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitUnaryExpr"):
                listener.exitUnaryExpr(self)




    def unaryExpr(self):

        localctx = ProjectParser.UnaryExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_unaryExpr)
        try:
            self.state = 190
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ProjectParser.Lparen, ProjectParser.ID, ProjectParser.Constant, ProjectParser.StrLiteral]:
                self.enterOuterAlt(localctx, 1)
                self.state = 186
                self.postfixExpr(0)
                pass
            elif token in [ProjectParser.Add, ProjectParser.Sub, ProjectParser.Not]:
                self.enterOuterAlt(localctx, 2)
                self.state = 187
                self.unaryOperator()
                self.state = 188
                self.castExpr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UnaryOperatorContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ProjectParser.UnaryOperatorContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ProjectParser.RULE_unaryOperator

        def enterRule(self, listener):
            if hasattr(listener, "enterUnaryOperator"):
                listener.enterUnaryOperator(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitUnaryOperator"):
                listener.exitUnaryOperator(self)




    def unaryOperator(self):

        localctx = ProjectParser.UnaryOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_unaryOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ProjectParser.Add) | (1 << ProjectParser.Sub) | (1 << ProjectParser.Not))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CastExprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ProjectParser.CastExprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def unaryExpr(self):
            return self.getTypedRuleContext(ProjectParser.UnaryExprContext,0)


        def typeName(self):
            return self.getTypedRuleContext(ProjectParser.TypeNameContext,0)


        def castExpr(self):
            return self.getTypedRuleContext(ProjectParser.CastExprContext,0)


        def getRuleIndex(self):
            return ProjectParser.RULE_castExpr

        def enterRule(self, listener):
            if hasattr(listener, "enterCastExpr"):
                listener.enterCastExpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCastExpr"):
                listener.exitCastExpr(self)




    def castExpr(self):

        localctx = ProjectParser.CastExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_castExpr)
        try:
            self.state = 200
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 194
                self.unaryExpr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 195
                self.match(ProjectParser.Lparen)
                self.state = 196
                self.typeName()
                self.state = 197
                self.match(ProjectParser.Rparen)
                self.state = 198
                self.castExpr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MultiplicativeExprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ProjectParser.MultiplicativeExprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def castExpr(self):
            return self.getTypedRuleContext(ProjectParser.CastExprContext,0)


        def multiplicativeExpr(self):
            return self.getTypedRuleContext(ProjectParser.MultiplicativeExprContext,0)


        def getRuleIndex(self):
            return ProjectParser.RULE_multiplicativeExpr

        def enterRule(self, listener):
            if hasattr(listener, "enterMultiplicativeExpr"):
                listener.enterMultiplicativeExpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMultiplicativeExpr"):
                listener.exitMultiplicativeExpr(self)



    def multiplicativeExpr(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ProjectParser.MultiplicativeExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_multiplicativeExpr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 203
            self.castExpr()
            self._ctx.stop = self._input.LT(-1)
            self.state = 216
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 214
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = ProjectParser.MultiplicativeExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_multiplicativeExpr)
                        self.state = 205
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 206
                        self.match(ProjectParser.Mul)
                        self.state = 207
                        self.castExpr()
                        pass

                    elif la_ == 2:
                        localctx = ProjectParser.MultiplicativeExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_multiplicativeExpr)
                        self.state = 208
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 209
                        self.match(ProjectParser.Div)
                        self.state = 210
                        self.castExpr()
                        pass
